--- a/env/.config/i3/config
+++ b/env/.config/i3/config
@@ -20,7 +20,7 @@ font pango:monospace 15px
 #font pango:DejaVu Sans Mono 8
 exec always nitrogen --restore
 
-
+exec --no-startup-id nitrogen --restore
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
@@ -48,7 +48,7 @@ floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+#tiling_drag modifier titlebar
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
