hasbi arch savar

--- a/env/.config/hypr/hyprlock.conf
+++ b/env/.config/hypr/hyprlock.conf
@@ -1,2 +1,114 @@
-bezier = linear, 1, 1, 0, 0
-animation = fade, 1, 1.8, linear
+$font = JetBrains Mono  # Or try "Fira Code" or "JetBrains Mono"
+
+general {
+    hide_cursor = true
+    fail_timeout = 10
+    ignore_empty_input = true
+}
+
+animations {
+    enabled = true
+    bezier = linear, 1, 1, 0, 0
+    animation = fadeIn, 1, 5, linear
+    animation = fadeOut, 1, 5, linear
+    animation = inputFieldDots, 1, 2, linear
+}
+
+background {
+    monitor =
+    path = $XDG_CONFIG_HOME/hypr/bg.jpg  # Ensure this is a dark image
+    blur_passes = 2
+    # Alternative: color = rgb(0, 0, 0) for solid black
+}
+
+input-field {
+    monitor =
+    size = 20%, 5%
+    outline_thickness = 3
+    inner_color = rgba(0, 0, 0, 0.0)
+    outer_color = rgba(200, 200, 200, 0.5) rgba(255, 255, 255, 0.5) 45deg
+    check_color = rgba(0, 0, 255, 0.5) rgba(0, 0, 200, 0.5) 45deg
+    fail_color = rgba(255, 0, 0, 0.5) rgba(200, 0, 0, 0.5) 45deg
+    font_color = rgb(255, 255, 255)
+    fade_on_empty = false
+    rounding = 15
+    font_family = $font
+    placeholder_text = Enter password...
+    fail_text = $PAMFAIL
+    dots_spacing = 0.3
+    position = 0, -20
+    halign = center
+    valign = center
+}
+
+# TIME shadow
+label {
+    monitor =
+    text = $TIME
+    color = rgb(0, 0, 0)
+    font_size = 90
+    font_family = $font
+    position = -28, 2
+    halign = right
+    valign = top
+}
+
+# TIME
+label {
+    monitor =
+    text = $TIME
+    color = rgb(255, 255, 255)
+    font_size = 90
+    font_family = $font
+    position = -30, 0
+    halign = right
+    valign = top
+}
+
+# DATE shadow
+label {
+    monitor =
+    text = cmd[update:60000] date +"%A, %d %B %Y"
+    color = rgb(0, 0, 0)
+    font_size = 25
+    font_family = $font
+    position = -28, -148
+    halign = right
+    valign = top
+}
+
+# DATE
+label {
+    monitor =
+    text = cmd[update:60000] date +"%A, %d %B %Y"
+    color = rgb(255, 255, 255)
+    font_size = 25
+    font_family = $font
+    position = -30, -150
+    halign = right
+    valign = top
+}
+
+# KEYBOARD LAYOUT shadow
+label {
+    monitor =
+    text = $LAYOUT[en,ir]
+    color = rgb(0, 0, 0)
+    font_size = 24
+    font_family = $font
+    position = 252, -18
+    halign = center
+    valign = center
+}
+
+# KEYBOARD LAYOUT
+label {
+    monitor =
+    text = $LAYOUT[en,ir]
+    color = rgb(255, 255, 255)
+    font_size = 24
+    font_family = $font
+    position = 250, -20
+    halign = center
+    valign = center
+}
