--- a/env/.config/hypr/hyprland.conf
+++ b/env/.config/hypr/hyprland.conf
@@ -22,9 +22,13 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
+monitor = eDP-1, 1920x1080, 0x0, 1.5
+monitor = DP-1, 1920x1080, 0x1080, 1
 
+#monitor=eDP-1,1920x1080@60,0x0,1,mirror,DP-1
 
+exec-once = hyprctl keyword monitor "eDP-1,disable"
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -32,7 +36,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = wezterm
 $fileManager = natilus
 $menu = wofi --show drun
 
@@ -51,7 +55,7 @@ exec-once = udiskie
 exec = hyprshade auto
 exec-once = /usr/bin/hyprland-per-window-layout
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
-exec-once = ~/.config/hypr/scripts/sleep.sh
+#exec-once = ~/.config/hypr/scripts/sleep.sh swayidle/hypridle
 exec-once = $terminal
 exec-once = nm-applet &
 exec-once = blueman-applet
@@ -86,7 +90,6 @@ general {
     gaps_out = 0
 
     border_size = 1
-
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -106,7 +109,7 @@ decoration {
     rounding_power = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.9
+    active_opacity = 1.0
     inactive_opacity = 0.7
 
     shadow {
@@ -229,6 +232,13 @@ device {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = ALT # Sets "Windows" key as main modifier
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
