--- a/env/.config/hypr/hyprland.conf
+++ b/env/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor = DP-1, 1920x1080, 0x1080, 1
 
 #monitor=eDP-1,1920x1080@60,0x0,1,mirror,DP-1
 
-exec-once = hyprctl keyword monitor "eDP-1,disable"
+#exec-once = hyprctl keyword monitor "eDP-1,disable"
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -56,7 +56,7 @@ exec = hyprshade auto
 exec-once = /usr/bin/hyprland-per-window-layout
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
 #exec-once = ~/.config/hypr/scripts/sleep.sh swayidle/hypridle
-exec-once = $terminal
+exec-once = $terminal & hyprctl dispatch movetoworkspace 1
 exec-once = nm-applet &
 exec-once = blueman-applet
 exec-once = mako
@@ -215,7 +215,6 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
@@ -251,6 +250,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 
+bind = $mainMod, L, exec, hyprlock
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -326,7 +326,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = supress_event maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0, no_focus 1
